finalized roject t with correct structuring and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,60 @@
 body{
     background-color: lightgrey;
     margin: 0;
-    flex-direction: column;
+
 }
 .box1{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     background-color: white;
     margin: auto;
     text-align: center;
-    width: 50%
-    padding 20px
 }
 .box2{
     display: flex;
-    border: 1px dotted red;
+    flex-direction: column;
+    /* border: 1px dotted purple; */
     margin: auto;
-    width: 50%;
+    margin-top: 30px;
+    width: 25%;
 }
-.box3{
-    border: 1px solid red;
-    font-size: 10px;
-
-}
-.date{
+.top-text1{
+    /* border: 1px solid red; */
+    background-color: white;
     display: flex;
-    float: right;
-    background-color: yellow;
-    border: 1px dotted blue;
-    margin-left: auto;
-
-
+    flex-direction: row;
+    font-size: large;
+}
+.top-text1 p:nth-child(1){
+    margin-right: auto;
+    /* border: solid blue; */
+    padding: 0px 10px;
+    font-weight: bold;
+}
+.top-text1 p:nth-child(2){
+    /* margin-left: auto; */
+    /*border: solid blue;*/
+    padding: 0px 10px;
+    color: grey;
+}
+.dog-img{
+    /* border: dotted green; */
+    border-bottom: 1px solid lightgrey;
+    border-top: 1px solid lightgrey;
+    display: flex;
+    justify-content: center; 
+    height: 30rem;
+    background-color: white;
+}
+.dog-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    overflow: hidden;
+}
+.bottom-text1{
+    display: flex;
+    background-color: white;
+    padding-left: 10px;
 }
